--- a/design/openpa_flat/scss/flat/_responsive.scss
+++ b/design/openpa_flat/scss/flat/_responsive.scss
@@ -214,6 +214,9 @@
         width: $submenu_item_width - 40px;
       }
     }
+    .sub_menu-item{
+      float: left;
+    }
   }
 }
 
